--- a/진현미/index.html
+++ b/진현미/index.html
@@ -109,14 +109,84 @@
 
 
         <section id="section3">
-            <h2>02. 코딩 자랑</h2>
-            <div class="sec3-cont"></div>
+            <h2>02. 사이트</h2>
+            <div class="sec3-cont">
+                <h3>"웹의 감성을 품은 예술적인 개발자 : 사이트 코딩"</h3>
+                <div class="site-wrap">
+                    <div class="site s1">
+                        <span>웹표준 코딩을 해봤음</span>
+                        <h4>웹표준을 준수한<br>사이트 제작</h4>
+                        <div>
+                            <div class="left">
+                                <p>웹접근성, 스킵 메뉴, 이미지 스플라이트 이미지 슬라이드 효과를 작업하였습니다. </p>
+                                <a href="#">지금 확인하기</a>
+                            </div>
+                            <div class="right">
+                                <img src="assets/img/iMac.png" alt="dd">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="site s2">
+                        <span>웹표준 코딩을 해봤음</span>
+                        <h4>웹표준을 준수한<br>사이트 제작</h4>
+                        <div>
+                            <div class="left">
+                                <p>웹접근성, 스킵 메뉴, 이미지 스플라이트 이미지 슬라이드 효과를 작업하였습니다. </p>
+                                <a href="#">지금 확인하기</a>
+                            </div>
+                            <div class="right">
+                                <img src="assets/img/iMac.png" alt="dd">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="site s3">
+                        <span>웹표준 코딩을 해봤음</span>
+                        <h4>웹표준을 준수한<br>사이트 제작</h4>
+                        <div>
+                            <div class="left">
+                                <p>웹접근성, 스킵 메뉴, 이미지 스플라이트 이미지 슬라이드 효과를 작업하였습니다. </p>
+                                <a href="#">지금 확인하기</a>
+                            </div>
+                            <div class="right">
+                                <img src="assets/img/iMac.png" alt="dd">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="site s4">
+                        <span>웹표준 코딩을 해봤음</span>
+                        <h4>웹표준을 준수한<br>사이트 제작</h4>
+                        <div>
+                            <div class="left">
+                                <p>웹접근성, 스킵 메뉴, 이미지 스플라이트 이미지 슬라이드 효과를 작업하였습니다. </p>
+                                <a href="#">지금 확인하기</a>
+                            </div>
+                            <div class="right">
+                                <img src="assets/img/iMac.png" alt="dd">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- //section2 -->
+        <!-- //section3 -->
 
-        <section id="section4"></section>
-        <section id="section5"></section>
-        <section id="section6"></section>
+        <section id="section4">
+            <h2>03. 스크립트</h2>
+            <div class="sec4-cont"></div>
+        </section>
+        <!-- //section4 -->
+
+        <section id="section5">
+            <h2>04. 리액트</h2>
+            <div class="sec5-cont"></div>
+        </section>
+        <!-- //section5 -->
+
+        <section id="section6">
+            <h2>05. 연락처</h2>
+            <div class="sec6-cont"></div>
+        </section>
+        <!-- //section6 -->
     </main>
 
 
@@ -150,9 +220,61 @@
         ScrollTrigger.create({
             trigger: panel2,
             start: "top top",
+            end: "+=20000",
             pin: true,
+            anticipatePin: 1,
             pinSpacing: false
         });
+
+
+        const panel3 = document.querySelector("#section3");
+        const ani3 = gsap.timeline();
+        ani3.to(".site-wrap", {xPercent: -300})
+
+        ScrollTrigger.create({
+            animation: ani3,
+            trigger: panel3,
+            start: "top top",
+            end: "+=20000",
+            pin: true,
+            anticipatePin: 1,
+            pinSpacing: false,
+            scrub: true
+        });
+
+        const panel4 = document.querySelector("#section4");
+
+        ScrollTrigger.create({
+            trigger: panel4,
+            start: "top top",
+            end: "+=20000",
+            pin: true,
+            anticipatePin: 1,
+            pinSpacing: false
+        });
+
+        const panel5 = document.querySelector("#section5");
+
+        ScrollTrigger.create({
+            trigger: panel5,
+            start: "top top",
+            end: "+=20000",
+            pin: true,
+            anticipatePin: 1,
+            pinSpacing: false
+        });
+
+        const panel6 = document.querySelector("#section6");
+
+        ScrollTrigger.create({
+            trigger: panel6,
+            start: "top top",
+            pin: true,
+            anticipatePin: 1
+        });
+
+
+
 
 
     </script>
