--- a/권현정/index.html
+++ b/권현정/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="assets/css/fonts.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro" rel="stylesheet">
 </head>
 <body>
     
@@ -90,13 +90,27 @@
                 <div class="sec3-title5">next.js site</div>
             </div>
             <div class="site-wrap">
-                <div class="site1">1</div>
-                <!-- <div class="site1">2</div>
-                <div class="site1">3</div>
-                <div class="site1">4</div> -->
+                <div class="site site1">
+                    <h3>WEBSTANDARD SITE</h3>
+                    <div class="left"></div>
+                    <div class="right">
+                        <span>view</span><span>code</span>
+                        <p>
+                            안녕하세요. 프론트엔드를 꿈꾸는 김은수입니다.
+                            저의 포트폴리오에 오신 것을 환영합니다. 디자인에 관심이 
+                            생겨 웹반응형UI/UX 웹 퍼블리셔과정을 배우게 되었는데 웹페이지에서 동적인 것을 구현할 수 있는 느끼게 됐습니다. 
+                            새로운 기술들이 끊임없이 나오는 프론트엔드에서 최신 트렌드에 뒤쳐지지 않기 위해 검색을 통해 동향을 파악하고 각각의 기술들의 장단점을 확실하게  알고 원하는 기능이필요할 때 바로 배우고 적용할 수 있는 개발자가 되겠습니다.  공들여 만든 프로젝트와 제 노력의 결과물을 보실 수 있습니다.  편안하게 보시며 즐겨주세요. 감사합니다.
+                        </p>
+                        <h2>#12 Time</h2>
+                    </div>
+                </div>
+                <div class="site site1">2</div>
+                <div class="site site1">3</div>
+                <div class="site site1">4</div>
             </div>
         </section>
         <!-- //section3 -->
+        
         <section id="section4"></section><!-- //section4 -->
         <section id="section5"></section><!-- //section5 -->
         <section id="section6"></section><!-- //section6 -->
