--- a/이양구/index2.html
+++ b/이양구/index2.html
@@ -53,7 +53,59 @@
                 </div>
 
                 <div class="sec2-about">
-                    <div></div>
+                    <div class="t1">
+                      <h3><em>01</em>Mission</h3>
+                      <p>We are building Raw Materials to</p>
+                    </div>
+                    <div class="t2">
+                      <h3><em>02</em>Challenge</h3>
+                      <p>저는 항상 새로운 도전을 통해 스스로를 발전시키고자 하는 열정을 가지고 있습니다. <em>어려운 문제에 직면하더라도 결코 굴하지 않고</em>, 적극적인 태도로 학습하고 성장하는 것을 목표로 삼고 있습니다. 제한된 경험과 지식을 극복하며, 능동적으로 새로운 기술과 개념을 습득하고 적용해 나갈 준비가 되어 있습니다</p>
+                    </div>
+                    <div class="t3">
+                      <h3><em>03</em>Goal</h3>
+                      <p>실력과 노력은 점점 상승한다고 믿습니다. 저는 끊임없이 발전하고자 하는 열정과 인내심을 가지고 있으며, 어떤 일이든 최선을 다해 성취하기 위해 노력할 것입니다. 제가 부족한 부분을 채우기 위해 노력하고, 함께 일하는 동료들과의 협업을 통해 더 큰 성과를 이뤄낼 자신이 있습니다.</p>
+                    </div>
+                    <div class="t4">
+                      <h3><em>04</em>Skill</h3>
+                      <div class="skill-box">
+                        <div>
+                          <h4>coding <em>01</em></h4>
+                          <ul>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                          </ul>
+                        </div>
+                        <div>
+                          <h4>coding <em>01</em></h4>
+                          <ul>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                          </ul>
+                        </div>
+                        <div>
+                          <h4>coding <em>01</em></h4>
+                          <ul>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                            <li>webstandard <i>1</i></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
                 </div>
 
             </section>
@@ -66,6 +118,29 @@
               <div class="sec3-desc">
                 <span>02</span>
                 <h3>Site</h3>
+              </div>
+              <div class="sec3-site">
+                
+                <div class="site site1">
+                  <div class="left">
+                    <img src="https://songjunseop.github.io/webs_class/Portfolio/assets/image/mockup01.png" alt="">
+                  </div>
+                  <div class="right">
+                    <h4>webstandard</h4>
+                    <p>
+                      다양한 분야의 업무를 하며 나의 적성에 맞는 일을 찾고자 노력을 했습니다.<br>
+                      다니던 대학원을 휴학하고 국비지원 학원에서 약 6개월간의 여정을 시작했습니다. <br>
+                      아직은 서툴고 부족하다는 점을 알고 있습니다.</p>
+                    <div class="btn">
+                      <a href="#">code</a>
+                      <a href="#">view</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="site site2"></div>
+                <div class="site site3"></div>
+                <div class="site site4"></div>
+                <div class="site site5"></div>
               </div>
             </section>
             <!-- //section3 -->
