--- a/권현정/index.html
+++ b/권현정/index.html
@@ -111,7 +111,71 @@
         </section>
         <!-- //section3 -->
         
-        <section id="section4"></section><!-- //section4 -->
+        <section id="section4">
+            <div class="title-wrap">
+                <div class="sec4-title1">3.</div>
+                <div class="sec4-title2">Parallax Effect</div>
+                <div class="sec4-title3">quiz Effect</div>
+                <div class="sec4-title4">mouse Effect</div>
+                <div class="sec4-title5">search Effect</div>
+            </div>
+            <div class="script-wrap">
+                <div class="script">
+                    <div class="left">
+                        <div class="view">
+                            <span>PARALLAX EFFECT</span>
+                        </div>
+                        <ul>
+                            <li>강력한 스크롤 제어 </li>
+                            <li>애니메이션 트리거 설정 </li>
+                            <li>다양한 애니메이션 유형 </li>
+                            <li>반응형 지원 </li>
+                            <li>scrollTrigger </li>
+                        </ul>
+                    </div>
+                    <div class="right">
+                        <div class="view">
+                            <span>MOUSE EFFECT</span>
+                        </div>
+                        <ul>
+                            <li>강력한 스크롤 제어 </li>
+                            <li>애니메이션 트리거 설정 </li>
+                            <li>다양한 애니메이션 유형 </li>
+                            <li>반응형 지원 </li>
+                            <li>scrollTrigger </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="script">
+                    <div class="left">
+                        <div class="view">
+                            <span>PARALLAX EFFECT</span>
+                        </div>
+                        <ul>
+                            <li>강력한 스크롤 제어 </li>
+                            <li>애니메이션 트리거 설정 </li>
+                            <li>다양한 애니메이션 유형 </li>
+                            <li>반응형 지원 </li>
+                            <li>scrollTrigger </li>
+                        </ul>
+                    </div>
+                    <div class="right">
+                        <div class="view">
+                            <span>MOUSE EFFECT</span>
+                        </div>
+                        <ul>
+                            <li>강력한 스크롤 제어 </li>
+                            <li>애니메이션 트리거 설정 </li>
+                            <li>다양한 애니메이션 유형 </li>
+                            <li>반응형 지원 </li>
+                            <li>scrollTrigger </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- //section4 -->
+
         <section id="section5"></section><!-- //section5 -->
         <section id="section6"></section><!-- //section6 -->
     </main>
