--- a/변우현/index.html
+++ b/변우현/index.html
@@ -16,7 +16,6 @@
 
     <header id="header">
         <h1 class="logo">portfolio</h1>
-
     </header>
     <!-- //header -->
 
@@ -60,12 +59,95 @@
                         때로는 어려움과 실패가 찾아올 수도 있겠지만, 나는 그것을 좌절로 받아들이지 않고 새로운 도약의 기회로 삼을 것입니다. 나는 배움의 여정에서 끊임없이 성장하고, 내가 원하는 꿈을 실현하기 위해 열심히 노력할 것입니다.
                     </p>
                 </div>
-                
             </div>
+
+            <div class="smallBox1">
+                <div class="img"></div>
+                <span>frontend</span>
+                <em>04.09 ~ 08.03</em>
+            </div>
+
+            <div class="smallBox2">
+                <div class="img"></div>
+                <span>frontend</span>
+                <em>04.09 ~ 08.03</em>
+            </div>
+
+            <div class="smallBox3">
+                <div class="img"></div>
+                <span>frontend</span>
+                <em>04.09 ~ 08.03</em>
+            </div>
+
+            <span class="line end"></span>
         </section>
         <!-- //section2 -->
 
-        <section id="section3"></section>
+        <section id="section3">
+            <h2>script<br><em>coding</em></h2>
+            <span class="line"></span>
+            
+            <div class="script-wrap">
+                <div class="script">
+                    <a class="IndexItem" href="#" style="clip-path: url(&quot;#197729344&quot;);">
+                        <svg width="0" height="0" viewBox="0 0 368 539">
+                            <clipPath id="197729344" clipPathUnits="objectBoundingBox" transform="scale(0.002717391304348 0.001855287569573)">
+                                <path d="M0 7.80989C0 3.49661 3.4966 0 7.80988 0H359.254C363.568 0 367.064 3.4966 367.064 7.80988V294.823V509.245C367.064 511.316 366.242 513.302 364.777 514.767L343.319 536.225C341.854 537.69 339.868 538.513 337.796 538.513H190.04H7.80987C3.4966 538.513 0 535.016 0 530.703V7.80989Z"></path>
+                            </clipPath>
+                        </svg>
+                        <div class="IndexItem_background" style="clip-path: url(&quot;#197729344&quot;);"></div>
+                        <div class="Index-info">
+                            <div class="img"></div>
+                            <h3>parallax</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="script">
+                    <a class="IndexItem" href="#" style="clip-path: url(&quot;#197729344&quot;);">
+                        <svg width="0" height="0" viewBox="0 0 368 539">
+                            <clipPath id="197729344" clipPathUnits="objectBoundingBox" transform="scale(0.002717391304348 0.001855287569573)">
+                                <path d="M0 7.80989C0 3.49661 3.4966 0 7.80988 0H359.254C363.568 0 367.064 3.4966 367.064 7.80988V294.823V509.245C367.064 511.316 366.242 513.302 364.777 514.767L343.319 536.225C341.854 537.69 339.868 538.513 337.796 538.513H190.04H7.80987C3.4966 538.513 0 535.016 0 530.703V7.80989Z"></path>
+                            </clipPath>
+                        </svg>
+                        <div class="IndexItem_background" style="clip-path: url(&quot;#197729344&quot;);"></div>
+                        <div class="Index-info">
+                            <div class="img"></div>
+                            <h3>parallax</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="script">
+                    <a class="IndexItem" href="#" style="clip-path: url(&quot;#197729344&quot;);">
+                        <svg width="0" height="0" viewBox="0 0 368 539">
+                            <clipPath id="197729344" clipPathUnits="objectBoundingBox" transform="scale(0.002717391304348 0.001855287569573)">
+                                <path d="M0 7.80989C0 3.49661 3.4966 0 7.80988 0H359.254C363.568 0 367.064 3.4966 367.064 7.80988V294.823V509.245C367.064 511.316 366.242 513.302 364.777 514.767L343.319 536.225C341.854 537.69 339.868 538.513 337.796 538.513H190.04H7.80987C3.4966 538.513 0 535.016 0 530.703V7.80989Z"></path>
+                            </clipPath>
+                        </svg>
+                        <div class="IndexItem_background" style="clip-path: url(&quot;#197729344&quot;);"></div>
+                        <div class="Index-info">
+                            <div class="img"></div>
+                            <h3>parallax</h3>
+                        </div>
+                    </a>
+                </div>
+                <div class="script">
+                    <a class="IndexItem" href="#" style="clip-path: url(&quot;#197729344&quot;);">
+                        <svg width="0" height="0" viewBox="0 0 368 539">
+                            <clipPath id="197729344" clipPathUnits="objectBoundingBox" transform="scale(0.002717391304348 0.001855287569573)">
+                                <path d="M0 7.80989C0 3.49661 3.4966 0 7.80988 0H359.254C363.568 0 367.064 3.4966 367.064 7.80988V294.823V509.245C367.064 511.316 366.242 513.302 364.777 514.767L343.319 536.225C341.854 537.69 339.868 538.513 337.796 538.513H190.04H7.80987C3.4966 538.513 0 535.016 0 530.703V7.80989Z"></path>
+                            </clipPath>
+                        </svg>
+                        <div class="IndexItem_background" style="clip-path: url(&quot;#197729344&quot;);"></div>
+                        <div class="Index-info">
+                            <div class="img"></div>
+                            <h3>parallax</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!-- //section3 -->
+
         <section id="section4"></section>
         <section id="section5"></section>
         <section id="section6"></section>
