--- a/이혜민/index.html
+++ b/이혜민/index.html
@@ -39,8 +39,61 @@
         <canvas id="canvas"></canvas>
     </section>
     <!-- //section -->
-    <section id="section2"></section><!-- //section -->
-    <section id="section3"></section><!-- //section -->
+
+    <section id="section2">
+        <div class="container">
+            <div class="about">
+                <span>about me 😇</span>
+                끊임없이 혁신적인 웹 프론트엔드 솔루션을 창조하는 밝고 창의적인 프론트 개발자로서, 저는 <em>최신 기술 트렌드에</em> 발맞춰 항상 발전하고자 노력하고 있습니다.
+                <strong>사용자 경험을</strong> 최우선으로 여기며,
+                모든 프로젝트에 심미적이고 기능적인 접근을 취함으로써 <b>디지털 세계의 미래를 형성하는 데 기여하고자 합니다</b>.🥳😘🥰
+            </div>
+        </div>
+        <div class="line1">Potencial <span>😎</span> Potencial <span>🥳😘🥰</span> Potencial</div>
+        <div class="line2">Creativity <span>🥰</span> Creativity <span>😜</span> Creativity</div>
+        <div class="line3">Sensbility <span>😎</span> Sensbility <span>😘</span> Sensbility</div>
+    </section>
+    <!-- //section -->
+
+    <section id="section3">
+        <div class="container">
+            <div class="about">
+                <span>work list 👏</span>
+                저의 포트폴리오는 혁신적인 웹 <em>프론트엔드 디자인과</em> 개발에 초점을 맞추고 있습니다.
+                사용자 친화적인 인터페이스와 독창적인 시각적 요소를 결합하여,
+                각 프로젝트는 독특하면서도 <strong>직관적인 사용자 경험을</strong> 제공합니다.
+                이 포트폴리오는 제가 참여한 다양한 프로젝트들을 통해 <b>기술적 능력과 창의적인 해결책을 보여줍니다</b>
+            </div>
+
+            <div class="site-wrap">
+                <div class="site s1">
+                    <h3>youtube site</h3>
+                    <p>
+                        JavaScript를 활용하여 '이미지 퀴즈' 웹사이트를 제작하였습니다.
+                        이 웹사이트는 사용자가 4개의 이미지 중 문제에 해당하는 이미지를 선택하여 정답을 맞추는 퀴즈 형식을 통해 사용자의 일반 상식 수준을 재미있게 확인할 수 있습니다.
+                        이 웹사이트의 특징은 직관적인 이미지 선택을 통한 퀴즈 제공으로, 사용자들이 문제를 보다 쉽고 빠르게 이해하고, 답변할 수 있도록 디자인되었습니다.
+                    </p>
+                    <div class="tag">
+                        <div>
+                            <span>3weeks</span>
+                            <span>Javascript</span>
+                            <span>Quiz</span>
+                            <span>Team</span>
+                        </div>
+                        <div>
+                            <span>view</span>
+                            <span>code</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="site s2"></div>
+                <div class="site s3"></div>
+                <div class="site s4"></div>
+            </div>
+        </div>
+    </section>
+    <!-- //section -->
+
     <section id="section4"></section><!-- //section -->
     <section id="section5"></section><!-- //section -->
     <section id="section6"></section><!-- //section -->
