--- a/이지영/index.html
+++ b/이지영/index.html
@@ -48,15 +48,137 @@
     <!-- //section1 -->
 
     <div id="section2">
-        <div class="left">
-            As a front-end developer, I will constantly try to acquire a variety of skills and knowledge to provide
-            users with a variety of experiences.
+        <div class="intro">
+            <div class="top">
+                As a front-end developer, I will constantly try to acquire a variety of skills and knowledge to
+                provide
+                users with a variety of experiences.
+            </div>
+            <div class="do">
+                <div class="img"></div>
+                <div>
+                    <h3>JAVASCRIPT</h3>
+                    <p>JavaScript를 이용하여 동적 웹페이지를 개발하며, 사용자와의 상호작용을 향상시키는데 주력합니다. 다양한 기능과 동적 요소를 통해 웹 경험을 더욱 흥미롭게
+                        만들어냅니다.</p>
+                </div>
+                <div>
+                    <h3>REACT</h3>
+                    <p>React를 활용하여 모던하고 성능 최적화된 웹 애플리케이션을 구축합니다. 컴포넌트 기반 아키텍처로 효율적이고 확장 가능한 사용자 경험을 제공합니다.</p>
+                </div>
+                <div>
+                    <h3>PHP</h3>
+                    <p>PHP를 활용하여 동적이고 효율적인 웹 애플리케이션을 개발합니다. 서버 측 스크립트 언어로써, 데이터베이스와의 통합 및 다양한 웹 기능을 구현하는 것에 중점을 둡니다.
+                    </p>
+                </div>
+                <div>
+                    <h3>NODE.JS</h3>
+                    <p>Node.js를 이용하여 서버 측 JavaScript 환경에서 효율적이고 확장 가능한 웹 애플리케이션을 구축합니다. 비동기 프로그래밍으로 높은 성능을 유지합니다.
+                    </p>
+                </div>
+                <div>
+                    <h3>HTML.JS</h3>
+                    <p>Node.js를 이용하여 서버 측 JavaScript 환경에서 효율적이고 확장 가능한 웹 애플리케이션을 구축합니다. 비동기 프로그래밍으로 높은 성능을 유지합니다.
+                    </p>
+                </div>
+                <div>
+                    <h3>CSS</h3>
+                    <p>PHP를 활용하여 동적이고 효율적인 웹 애플리케이션을 개발합니다. 서버 측 스크립트 언어로써, 데이터베이스와의 통합 및 다양한 웹 기능을 구현하는 것에 중점을 둡니다.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="right"></div>
-        <div class="bottom"></div>
     </div>
     <!-- //section2 -->
-    <div id="section3"></div><!-- //section3 -->
+
+    <div id="section3">
+        <div>
+            <h3>work</h3>
+            <p class="desc">
+                Exploring Creativity and Innovation Daily
+            </p>
+            <div class="work__list">
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work">
+                    <div class="img"></div>
+                    <div class="info">
+                        <span>2023.01.03</span>
+                        <h4>유튜브 API룰 이용한 나만의 유튜브 사이트 만들기</h4>
+                        <p>유튜브 API를 활용한 나만의 유튜브 사이트 만들기" 프로젝트는 유튜브의 강력한 기능을 자체 웹사이트에 통합하는 방법을 탐구합니다. 이 프로젝트에서는 API를 사용하여
+                            실시간으로 유튜브 콘텐츠를 검색하고, 사용자가 선호하는 비디오를 쉽게 찾고 시청할 수 있도록 합니다.</p>
+                        <div class="btn">
+                            <a href="#">코드 보기</a>
+                            <a href="#">완성 보기</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- //section3 -->
     <div id="section4"></div><!-- //section4 -->
     <div id="section5"></div><!-- //section5 -->
     <div id="section6"></div><!-- //section6 -->
