--- a/윤지성/index.html
+++ b/윤지성/index.html
@@ -34,9 +34,9 @@
                     <h3>work list</h3>
                     <div>
                         <ul>
-                            <li>
+                            <li class="about">
                                 <a href="#"></a>
-                                <span>youtube</span>
+                                <span>about me</span>
                             </li>
                             <li>
                                 <a href="#"></a>
@@ -90,7 +90,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script>
-
         gsap.set(".layer__about", { autoAlpha: 0, y: 20 });
 
         document.querySelector(".footer__info .menu").addEventListener("click", () => {
